Fixed: Intensity meter should go back to the toolbox when the close button is pressed
Fixed: Intensity meter is in the wrong location when dragged out of the toolbox
Added a toolbox with draggable icons
Show "n=?" for mystery objects
Hide slider for mystery objects
Split apart control panel into laser view and tools
Fixed: protractor intercepts mouse events when invisible
Added MediumControlPanel
Improved canvas and stage size
Increased size of intensity meter and protractor
# 0.00.08 (48746) Feb 8, 2011
Fixed protractor location
# 0.00.07 (48744) Feb 8, 2011
Rounded the corners of the control panel
Minimized range of slider to prevent overlap of tick labels in English
Made drag arrows round instead of straight
Improved coordinate frames
Intermediate fixes for coordinate frames
Changed air to be white instead of black
Changed normal line to be black instead of yellow
Improved medium colors to support air=white instead of air=black
Start the intensity meter in the bottom right
Start the protractor in the lower-left corner
Moved the control panel layer in front of the horizontal line
Moved the laser back to the top layer and made media opaque
# 0.00.06 (48693) Feb 6, 2011
Fixed: only show drag arrow in the direction the laser can be moved
# 0.00.05 (48691) Feb 6, 2011
Added rotation path arrows on mouse hover for laser pointer
Made the protractor draggable
Moved the camera to the right so the origin is centered in the play area
Moved the laser behind the medium
Added transparency to the mediums
Improved colors for large indices of refraction
Added tick marks to the index of refraction sliders
Fixed: sim should start with laser off
Added a line that will show the border between the mediums even when both n's are the same
Fixed: laser on/off button does not switch images right now
Fixed: The laser beam could be a little thicker, maybe 2x what it is now?
# 0.00.04 (48679) Feb 5, 2011
Added developer controls for colors
Show intensity on intensity meter