@@ -1,3 +1,4 @@
+Made it possible to drop protractor back in the toolbox
 Fixed: Intensity meter should go back to the toolbox when the close button is pressed
 Fixed: Intensity meter is in the wrong location when dragged out of the toolbox
 Added a toolbox with draggable icons
